--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,10 @@ a:has(+ form):hover{
   background-color: #eee;
 }
 
+button:hover{
+  cursor:pointer;
+}
+
 /* ID Styles */
 
 #AppWrapper2{
@@ -150,6 +154,9 @@ a:has(+ form):hover{
 #EncryptionOperations form:nth-child(1) legend{
   margin-bottom: 10px;
 }
+#EncryptionOperations form:nth-child(1) legend:nth-of-type(2){
+  margin-top: 5px;
+}
 #EncryptionOperations form:nth-child(1) label{
   display:inline-block;
   width: 40%;
@@ -157,6 +164,15 @@ a:has(+ form):hover{
 #EncryptionOperations form:nth-child(1) input{
   margin-bottom: 2px;
 }
+#EncryptionOperations form:nth-child(1) button{
+  display: flex;
+  flex-flow: column;
+  font-size: 90%;
+  padding: 10px;
+  margin-bottom: 5px;
+  width: 100%;
+}
+
 
 #EncryptionOperations form:nth-child(2) {
   width: 60%;
@@ -168,6 +184,6 @@ a:has(+ form):hover{
 #EncryptionOperations form:nth-child(2) div:nth-child(2){
   display: flex;
   flex-flow: row;
-  margin-top: 0;
+  margin: 0;
   justify-content: center;
 }
