Copy message to clipboard button now present and functional on beginner view

--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,10 @@ button:hover{
 
 /* Class Styles */
 
+.fit-content-width{
+  width:fit-content;
+}
+
 .ReactModal__Content{
   width: 400px;
   margin: 0 auto;
