Paste message to text box added; copy/paste message added to AdvancedView

--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,12 @@ button:hover{
 
 .fit-content-width{
   width:fit-content;
+  margin-right: 2%;
+}
+
+.message-buttons{
+  display:flex;
+  flex-flow:row;
 }
 
 .ReactModal__Content{
