--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: titleFont;
+  src: url(fonts/auto-techno.ttf);
+}
+
+@font-face {
+  font-family: futureTech;
+  src: url(fonts/FutureTech.ttf);
+}
+
+@font-face {
+  font-family: simpleTech;
+  src: url(fonts/SimpleTechBold02.ttf);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +20,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(90deg, #004d85, #000b26);
+  background-size:cover;
 }
 
 code {
@@ -14,6 +31,7 @@ code {
 
 /* Tag Styles */
 h1{
+  font-family: titleFont;
   border: 1px solid #3f3f3f;
   width: 90%;
   margin: 2% auto;
@@ -24,15 +42,20 @@ h1:has(+ #Beginner), h1:has(+ #Advanced), h2:has(+ a){
   display: none;
 }
 
+h2{
+  font-family: simpleTech;
+}
+
 h1, h2{
   text-align: center;
+  color: #fff;
 }
 
 form{
-  background-color: #f1f1f1;
+  background-color: #0e415c;
   padding: 2%;
   margin: 0 2% 2%;
-  border: 1px solid #3f3f3f;
+  border: 2px solid #307126;
   border-radius: 10px;
   display: flex;
 }
@@ -69,7 +92,10 @@ textarea{
 }
 
 label{
-  padding: 0 1% 0 3%;
+  padding: 0 2% 0 0%;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 80%;
 }
 
 select{
@@ -79,15 +105,25 @@ select{
 
 a:has(+ form){
   display:inline-block;
-  padding: 2%;
-  border: 1px solid #3f3f3f;
+  padding: 2.5% 0 1% 1%;
   margin: 2%;
-  border-radius: 5px;
   text-decoration: none;
+  border: 2px solid #307126;
+  border-radius: 5px;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #0e415c;
+  font-family: simpleTech;
+  box-shadow: inset 0 0 30px #00779f;
+  width:14%;
+  text-align: center;
 }
 
 a:has(+ form):hover{
   background-color: #eee;
+  font-weight: bold;
+  background-color: #00779f;
+  box-shadow: inset 0 0 10px #0e415c;
 }
 
 button:hover{
@@ -115,7 +151,7 @@ button:hover{
 .help-button{    
   visibility: hidden;
   position: absolute;
-  top: 95px;
+  top: 89px;
   right: 0;
   margin: 1%;
   width: 18px;
@@ -125,6 +161,7 @@ button:hover{
 .help-button:hover{
   background-color: #eee;
   right: 0;
+  top: 87px;
   width: 18px;
   height: 18px;
 }
@@ -134,11 +171,14 @@ button:hover{
   position: absolute;
   right: 0;
   content: "?";
-  border: 1px solid #3f3f3f;
-  border-radius: 25px;
   margin: 1%;
   width: 18px;
   height: 18px;
+  background-color: #0e415c;
+  border: 1px solid #eee;
+  border-radius: 100%;
+  color: #eee;
+  box-shadow: inset 0 0 6px #00779f;
 }
 
 /* ID Styles */
@@ -148,12 +188,14 @@ button:hover{
   flex-wrap: wrap;
   flex-flow: column;
   justify-content: space-between;
-  background-color: #ccc;
   width:50%;
   margin: 2% auto;
-  border: 1px solid #3f3f3f;
+  border: 4px solid #307126;
   border-radius: 10px;
   min-width:395px;
+  min-height: 300px;
+  background-image: url('TechUIOne.jpeg');
+  background-size: 200%;
 }
 
 #MainSelection{
@@ -162,19 +204,25 @@ button:hover{
 }
 
 #AppLanding a{
-  padding: 1em;
-  border: 2px solid #1f1f1f;
-  border-radius: 10px;
-  width: 25%;
-  display: inline-block;
-  text-decoration: none;
-  text-align: center;
+  border: 2px solid #307126;
+  border-radius: 5px;
+  padding: 2%;
+  text-transform: uppercase;
   margin: 2%;
-  color: #1f1f1f;
+  color: #fff;
+  background-color: #0e415c;
+  text-decoration: none;
+  display:block;
+  font-size: 150%;
+  font-family: futureTech;
+  box-shadow: inset 0 0 30px #00779f;
+  width: 25%;
 }
 
 #AppLanding a:hover {
-  background-color: #eee;
+  font-weight: bold;
+  background-color: #00779f;
+  box-shadow: inset 0 0 10px #0e415c;
 }
 
 #Beginner div:nth-child(1), #Advanced div:nth-child(1){
@@ -189,6 +237,12 @@ button:hover{
 
 #EncryptionOperations {
   display:flex;
+}
+
+legend{
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 80%;
 }
 
 #EncryptionOperations form:nth-child(1) {
@@ -236,4 +290,16 @@ button:hover{
   flex-flow: row;
   margin: 0;
   justify-content: center;
+}
+
+form button{
+  background-color: #004d85;
+  border: 2px solid #000b26;
+  border-radius: 7px;
+  box-shadow: inset 0 0 30px #00779f;
+  color:#eee;
+}
+form button:hover{
+  background-color: #00779f;
+  box-shadow: inset 0 0 30px #004d85;
 }
